Fix for the link to accommodation.html.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ etherpad:
     {% endif %}
 </p>
 <h5 class="jumbotron" style="padding: 10px; margin: 0px 0px 10px 0px;">
-    <a href="/accommodation.html">Local travel and accomodation information.</a> Also make sure you have visa for the UK, <a target="_blank" href="https://www.gov.uk/government/organisations/uk-visas-and-immigration">if you require one</a>.
+    <a href="{{ site.baseurl }}accommodation.html">Local travel and accomodation information.</a> Also make sure you have <a target="_blank" href="https://www.gov.uk/government/organisations/uk-visas-and-immigration">a visa for the UK</a>, if you require one.
 </h5>
 
 <!--
