--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@ etherpad:
   isn't set in the header, the Software Carpentry admin address is
   used.
 -->
+<h4>Contact</h4>
 <p>
-    <strong>Contact</strong>:
     Please email
     {% if page.contact %}
         {% assign contacts_size = page.contact | size %}
