Closed <td> tag

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ a Shibboleth SP.
             </tr>
              <tr>
                 <td>10:50 </td>
-                <td>Basic Shibboleth SP Installation and Configuration/td>
+                <td>Basic Shibboleth SP Installation and Configuration</td>
             </tr>
             <tr>
                 <td>12:30</td>
