Room info updated

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: workshop
 root: .
 title: AAI Workshop for Service and Resource Providers
 venue: University of Manchester
-address: Kilburn Building, School of Computer Science, University of Manchester, Oxford Road, Manchester M13 9PL, UK
+address: Kilburn Building, School of Computer Science, University of Manchester, Oxford Road, Manchester M13 9PL, UK (Room 2.15 on Day 2, Room 1.10 and Mercury Room on Day 2)
 latlng: 53.467674, -2.233924
 humandate: 15-16 March 2016
 humantime: 09:00-17:00
@@ -188,7 +188,7 @@ The workshop has two parts: Day 1 is common to all participants. Day 2 will have
 more community specific topics.
 </p>
 
-<h4>Day 1: Providing online services to a SAML based identity federation using Shibboleth software</h4>
+<h4>Day 1 (Room 2.15): Providing online services to a SAML based identity federation using Shibboleth software</h4>
 <p>
     Trainers: Lukas Hämmerle (GÉANT/SWITCH), Martin Haase (DAASI), Mikael Linden (CSC), Irina Mikhailava (GÉANT), Timo Mustonen (CSC)
 </p>
@@ -245,10 +245,10 @@ a Shibboleth SP.
 </div>
 <p></p>
 
-<h4>Day 2</h4>
+<h4>Day 2 (Room 1.10 and Mercury Room)</h4>
 <div class="row">
     <div class="col-md-6">
-        <h4>ELIXIR session</h4>
+        <h4>ELIXIR session (Room 1.10)</h4>
         <p>
             Trainers: Michal Prochazka (ELIXIR-CZ), Mikael Linden (ELIXIR-FI)
         </p>
@@ -296,7 +296,7 @@ a Shibboleth SP.
         </table>
     </div>
     <div class="col-md-6">
-        <h4>DARIAH session</h4>
+        <h4>DARIAH session (Mercury Room)</h4>
         <p>
             Trainers: Peter Gietz, Martin Haase (DARIAH-DE / DAASI International)
         </p>
