Added preparation section

--- a/index.html
+++ b/index.html
@@ -352,6 +352,51 @@ a Shibboleth SP.
 Please read the following documentation before the workshop:
 <ul>
     <li><a target="_blank" href="https://aarc-project.eu/documents/training-modules/federations-101/">Federations 101</a></li>
-    
 </ul>
+
+<h3>Things to bring to the training</h3>
+For the training you need a moderately powerful laptop with:
+<ul>
+<li>a WiFi interface</li>
+<li>at least 2GB RAM</li>
+<li>at least 10GB available hard drive space</li>
+<li>Virtual Box/VMware Player must be installed (see below)
+  together with the workshop VM image you downloaded
+  and tested like described below.</li> 
+</ul>
+
+Note that the laptop should not be older than 3-4 years. Otherwise,
+running the VirtualBox VM might very slow. Please also make sure you
+have administrator/root privileges for this laptop!
+
+<h3>Download and Test Workshop VM Image</h3>
+
+In order to ensure every participant has a working setup for the
+hands-on sessions, we kindly ask you to perform the following
+steps *before the event*. Only little time will be available to
+troubleshoot basic VirtualBox/VMware/OS problems at the event itself.
+<ol>
+    <li>Download and install VM solution:
+     Virtual Box https://www.virtualbox.org
+     VMware Player or VMware Fusion work too but Virtual Box
+     is recommended
+     Under Windows Vista or newer, please use the administrator
+     account to install the software!</li>
+    <li>Download and uncompress the Workshop VM Image (ca. 1.7 GByte) from:
+     http://swit.ch/AAI-Workshop-VM-2016-Manchester.zip</li>
+    <li>Open/import the SP Training VM image with VirtualBox or VMWare</li>
+    <li>Start the Training VM image.
+     You should see how the guest system (Ubuntu 14.04 LTS) starts.
+     After the boot process, Firefox should be opened automatically.
+     The page you should see is the workshop page, so:
+     http://anenadic.github.io/2016-03-15-elixir-aai-workshop-manchester/
+     - If you see this page, the VM Image has network connectivity
+       and all should be ok. You can now turn off the VM image.
+       (you might change the keyboard settings and other GUI
+       preferences but please don't change anything else)
+     - If you don't see this page, your laptop probably is not
+       connected to the Internet or then there is another problem.
+       If you don't manage to resolve the issues, please let us know
+       before the training.</li>
+</ol>
 
