--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@ Please read the following documentation before the workshop:
 
 <h3>Things to bring to the training</h3>
 For the training you need a moderately powerful laptop with:
+
 <ul>
 <li>a WiFi interface</li>
 <li>at least 2GB RAM</li>
@@ -373,17 +374,18 @@ have administrator/root privileges for this laptop!
 
 In order to ensure every participant has a working setup for the
 hands-on sessions, we kindly ask you to perform the following
-steps *before the event*. Only little time will be available to
+steps before the event. Only little time will be available to
 troubleshoot basic VirtualBox/VMware/OS problems at the event itself.
+
 <ol>
     <li>Download and install VM solution:
-     Virtual Box https://www.virtualbox.org
+     <a href="https://www.virtualbox.org">Virtual Box</a>
      VMware Player or VMware Fusion work too but Virtual Box
      is recommended
      Under Windows Vista or newer, please use the administrator
      account to install the software!</li>
     <li>Download and uncompress the Workshop VM Image (ca. 1.7 GByte) from:
-     http://swit.ch/AAI-Workshop-VM-2016-Manchester.zip</li>
+     <a href="http://swit.ch/AAI-Workshop-VM-2016-Manchester.zip">http://swit.ch/AAI-Workshop-VM-2016-Manchester.zip</a></li>
     <li>Open/import the SP Training VM image with VirtualBox or VMWare</li>
     <li>Start the Training VM image.
      You should see how the guest system (Ubuntu 14.04 LTS) starts.
