--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ troubleshoot basic VirtualBox/VMware/OS problems at the event itself.
      You should see how the guest system (Ubuntu 14.04 LTS) starts.
      After the boot process, Firefox should be opened automatically.
      The page you should see is the workshop page, so:
-     http://anenadic.github.io/2016-03-15-elixir-aai-workshop-manchester/
+     <a href="http://anenadic.github.io/2016-03-15-elixir-aai-workshop-manchester/">http://anenadic.github.io/2016-03-15-elixir-aai-workshop-manchester/</a>
      - If you see this page, the VM Image has network connectivity
        and all should be ok. You can now turn off the VM image.
        (you might change the keyboard settings and other GUI
