Added links to some training slides

--- a/index.html
+++ b/index.html
@@ -127,6 +127,15 @@ etherpad:
     Also, have a look at the documentation from the <a href="#preparation">Preparation</a> section below.
 </p>
 
+<h4>
+    Training material
+</h4>
+Find below material that might be useful during the training.
+    <ul>
+        <li><a href="https://drive.switch.ch/index.php/s/d32f2dcdf37f02cd1ff25a3440ee7fdd/download?path=%2F&files=AARC_SP_Training_v2.7.pdf">Shibboleth SP Training Slides (PDF)</a></li>
+        <li><a href="https://drive.switch.ch/index.php/s/d32f2dcdf37f02cd1ff25a3440ee7fdd/download?path=%2F&files=Handouts-Hints.pdf">Hints and Test Users (PDF)</a></li>
+    </ul>
+
 <!--
   ETHERPAD
 
