Added link to slides for ELIXIR training on Day 2

--- a/index.html
+++ b/index.html
@@ -130,10 +130,11 @@ etherpad:
 <h4>
     Training material
 </h4>
-<p>Find below material that might be useful during the training:</p>
+<p>Below are training material used at or useful for the training:</p>
     <ul>
         <li><a href="https://drive.switch.ch/index.php/s/d32f2dcdf37f02cd1ff25a3440ee7fdd/download?path=%2F&files=AARC_SP_Training_v2.7.pdf">Shibboleth SP Training Slides (PDF)</a></li>
         <li><a href="https://drive.switch.ch/index.php/s/d32f2dcdf37f02cd1ff25a3440ee7fdd/download?path=%2F&files=Handouts-Hints.pdf">Hints and Test Users (PDF)</a></li>
+        <li><a href="https://docs.google.com/presentation/d/1YAcJncyY1WabH8HcaS67x4Hpg0I9Ne7Sn6-511VbZ_Y/edit#slide=id.p4">ELIXIR AAI slides from Day 2</a></li>
     </ul>
 
 <!--
