--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ etherpad:
         <li><a href="https://drive.switch.ch/index.php/s/d32f2dcdf37f02cd1ff25a3440ee7fdd/download?path=%2F&files=AARC_SP_Training_v2.7.pdf">Shibboleth SP Training Slides (PDF)</a></li>
         <li><a href="https://drive.switch.ch/index.php/s/d32f2dcdf37f02cd1ff25a3440ee7fdd/download?path=%2F&files=Handouts-Hints.pdf">Hints and Test Users (PDF)</a></li>
         <li><a href="https://docs.google.com/presentation/d/1YAcJncyY1WabH8HcaS67x4Hpg0I9Ne7Sn6-511VbZ_Y/edit#slide=id.p4">ELIXIR AAI slides from Day 2</a></li>
+        <li><a href="https://storage.daasi.de/index.php/s/ByzeyL3SUtKkfXh">DARIAH AAI slides from Day 2</a></li>
     </ul>
 
 <!--
